@@ -197,7 +197,6 @@ t = 'economic dispatch (w/reserves) : most   ';
 mpc = mpc0;
 mpopt = mpoption(mpopt, 'most.dc_model', 0);
 mdi = loadmd(mpc, [], xgd);
-mdi.IncludeFixedReserves = 1;
 mdi.FixedReserves = mpc.reserves;
 mdo = most(mdi, mpopt);
 rr = mdo.flow(1,1,1).mpc;
@@ -234,7 +233,6 @@ t = 'DC OPF (w/reserves) : most   ';
 mpc = mpc0;
 mpopt = mpoption(mpopt, 'most.dc_model', 1);
 mdi = loadmd(mpc, [], xgd);
-mdi.IncludeFixedReserves = 1;
 mdi.FixedReserves = mpc.reserves;
 mdo = most(mdi, mpopt);
 rr = mdo.flow(1,1,1).mpc;
