@@ -242,7 +242,6 @@ mpc = mpc0;
 % mpc.gen(4, PMIN) = -350.8;
 mpopt = mpoption(mpopt, 'most.dc_model', 0);
 mdi = loadmd(mpc, [], xgd);
-mdi.IncludeFixedReserves = 1;
 mdi.FixedReserves = mpc.reserves;
 mdo = most(mdi, mpopt);
 rr = mdo.flow(1,1,1).mpc;
@@ -286,7 +285,6 @@ mpc = mpc0;
 % mpc.gen(4, PMIN) = -350.8;
 mpopt = mpoption(mpopt, 'most.dc_model', 1);
 mdi = loadmd(mpc, [], xgd);
-mdi.IncludeFixedReserves = 1;
 mdi.FixedReserves = mpc.reserves;
 mdo = most(mdi, mpopt);
 rr = mdo.flow(1,1,1).mpc;
